--- a/frontend/src/app/frontend/shared/components/header/header.component.html
+++ b/frontend/src/app/frontend/shared/components/header/header.component.html
@@ -3,7 +3,8 @@
   <div class="container">
     <div class="brand">
       <div class="logo">
-        <img src="logo.png" alt="ن" class="logo-icon" />
+        <!-- <img src="logo.png" alt="ن" class="logo-icon" /> -->
+          <link rel="icon" type="image/x-icon" href="logo.png">
       </div>
       <div class="brand-name">
         <h1>نوح</h1>
