--- a/frontend/src/app/frontend/components/hero/hero.component.html
+++ b/frontend/src/app/frontend/components/hero/hero.component.html
@@ -7,8 +7,10 @@
       <a href="/grades" class="cta-button">احجز الآن</a>
     </div>
     <div class="hero-image">
-      <img src="mo.jpg" alt="مدرس اللغة العربية">
-    </div>
+<!--       <img src="mo.jpg" alt="مدرس اللغة العربية">
+  <link rel="icon" type="image/x-icon" href="mo.jpg">
+
+    </div> -->
   </section>
 
 
