--- a/frontend/src/app/frontend/components/hero/hero.component.html
+++ b/frontend/src/app/frontend/components/hero/hero.component.html
@@ -11,6 +11,8 @@
       <img src="mo.jpg" alt="مدرس اللغة العربية">
       <link rel="icon" type="image/x-icon" href="mo.jpg">
       -->
+
+      <img src="assets/"mo.jpg" alt="ن" class="logo-icon" />
     </div>
   </section>
 </section>
