--- a/frontend/src/app/frontend/components/hero/hero.component.html
+++ b/frontend/src/app/frontend/components/hero/hero.component.html
@@ -12,7 +12,7 @@
       <link rel="icon" type="image/x-icon" href="mo.jpg">
       -->
 
-      <img src="assets/"mo.jpg" alt="ن" class="logo-icon" />
+      <img src="assets/mo.jpg" alt="ن" class="logo-icon" />
     </div>
   </section>
 </section>
