--- a/frontend/src/app/admin/components/booking/booking.component.html
+++ b/frontend/src/app/admin/components/booking/booking.component.html
@@ -15,7 +15,7 @@
         <td>{{ i + 1 }}</td>
         <td>{{ b.studentName }}</td>
         <td>{{ b.studentPhone }}</td>
-        <td>{{ b.stageId.name }}</td>
+      <td>{{ b.stageName }}</td>
       </tr>
     </tbody>
   </table>
