--- a/frontend/src/app/frontend/components/hero/hero.component.html
+++ b/frontend/src/app/frontend/components/hero/hero.component.html
@@ -1,9 +1,15 @@
 <section class="main-content" dir="rtl">
   <!-- Hero Section -->
+   
   <section class="hero-section">
+    
     <div class="hero-content">
-      <h1 class="hero-title">نوح لتعليم اللغة العربية</h1>
-      <p class="hero-description">تعلم العربية بأسلوب ممتع وفعال مع الأستاذ محمد أنور (نوح)</p>
+      <h1 class="hero-title">نوح</h1>
+<br>
+<br>
+<br>
+<br>
+
       <a href="/grades" class="cta-button">احجز الآن</a>
     </div>
     <div class="hero-image">
