--- a/frontend/src/app/frontend/shared/components/header/header.component.html
+++ b/frontend/src/app/frontend/shared/components/header/header.component.html
@@ -2,11 +2,15 @@
   <div class="container">
     <div class="brand">
       <div class="logo">
-        <img src="assets/logo.png" alt="ن" class="logo-icon" />
+        <!-- <img src="assets/logo.png" alt="ن" class="logo-icon" /> -->
+        <a href="/" class="logo-link">
+  <img src="assets/logo.png" alt="ن" class="logo-icon" />
+<a href="/"><h1>نوح</h1></a>
+</a>
+
       </div>
       <div class="brand-name">
         <h1>نوح</h1>
-        <p>لتعليم اللغة العربية</p>
       </div>
     </div>
     
