--- a/frontend/src/app/admin/components/booking/booking.component.html
+++ b/frontend/src/app/admin/components/booking/booking.component.html
@@ -8,6 +8,7 @@
         <th>اسم الطالب</th>
         <th>رقم الهاتف</th>
         <th> السنه الدراسيه</th>
+        <th>المرحلة</th>
       </tr>
     </thead>
     <tbody>
@@ -16,6 +17,8 @@
         <td>{{ b.studentName }}</td>
         <td>{{ b.studentPhone }}</td>
       <td>{{ b.stageName }}</td>
+      <td>{{ b.gradeName }}</td>
+      
       </tr>
     </tbody>
   </table>
