--- a/frontend/src/app/admin/layout/admin-layout/admin-layout.component.html
+++ b/frontend/src/app/admin/layout/admin-layout/admin-layout.component.html
@@ -1,4 +1,9 @@
-<app-sidebar></app-sidebar>
-<div class="content">
-  <router-outlet></router-outlet>
+<div class="main-wrapper">
+  <app-sidebar></app-sidebar>
+  <div class="content-wrapper">
+    <div class="content">
+      <!-- باقي المحتوى هنا -->
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </div>
