--- a/frontend/src/app/admin/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/admin/components/sidebar/sidebar.component.scss
@@ -3,7 +3,6 @@
 
 :host {
   display: block;
-  height: 100vh;
   direction: rtl;
 }
 
@@ -198,6 +197,7 @@
 
   .sidebar-header {
     justify-content: center;
+    padding: 15px 0;
 
     h3 {
       display: none;
@@ -227,6 +227,176 @@
 
     img {
       margin-left: 0;
+      width: 35px;
+      height: 35px;
+    }
+  }
+}
+
+/* Responsive adjustments */
+@media screen and (max-width: 992px) {
+  .sidebar {
+    width: 70px;
+    
+    &:not(.collapsed) {
+      position: fixed;
+      z-index: 1000;
+      height: 100vh;
+      box-shadow: 5px 0 15px rgba(0, 0, 0, 0.2);
+    }
+  }
+  
+  .sidebar.collapsed {
+    width: 70px;
+  }
+  
+  .main-wrapper:not(.sidebar-collapsed) .content-wrapper {
+    margin-right: 70px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .sidebar {
+    width: 60px;
+    
+    &-header {
+      padding: 15px 0;
+    }
+    
+    &-menu ul li a i {
+      font-size: 1.2rem;
+    }
+  }
+  
+  .sidebar.collapsed {
+    width: 60px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .sidebar {
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    bottom: 0;
+    top: auto;
+    flex-direction: row;
+    align-items: center;
+    padding: 0;
+    z-index: 1000;
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
+    
+    &-header {
+      display: none;
+    }
+    
+    &-menu {
+      flex: 1;
+      overflow-x: auto;
+      overflow-y: hidden;
+      padding: 0;
+      height: 100%;
+      
+      ul {
+        display: flex;
+        height: 100%;
+        
+        li {
+          margin: 0;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          
+          a {
+            height: 100%;
+            padding: 0 15px;
+            flex-direction: column;
+            justify-content: center;
+            border-right: none;
+            border-top: 3px solid transparent;
+            
+            i {
+              margin: 0 0 5px 0;
+              font-size: 1.2rem;
+            }
+            
+            .menu-text {
+              font-size: 0.7rem;
+              display: block;
+            }
+            
+            &:hover {
+              border-right: none;
+              border-top-color: #3498db;
+            }
+          }
+          
+          &.active a {
+            border-right: none;
+            border-top-color: #3498db;
+          }
+          
+          &.logout-item {
+            margin: 0;
+            border-top: none;
+            padding: 0;
+          }
+        }
+      }
+    }
+    
+    &-footer {
+      display: none;
+    }
+  }
+  
+  .sidebar.collapsed {
+    width: 100%;
+    
+    .menu-text {
+      display: block;
+    }
+  }
+  
+  .main-wrapper {
+    padding-bottom: 60px;
+  }
+}
+
+/* Landscape mode for mobile */
+@media screen and (max-width: 992px) and (orientation: landscape) {
+  .sidebar {
+    height: 50px;
+    
+    &-menu ul li a {
+      padding: 8px 15px;
+      
+      i {
+        font-size: 1rem;
+      }
+      
+      .menu-text {
+        font-size: 0.8rem;
+      }
+    }
+  }
+  
+  @media screen and (max-height: 400px) {
+    .sidebar {
+      height: 40px;
+      
+      &-menu ul li a {
+        padding: 5px 10px;
+        
+        i {
+          font-size: 0.9rem;
+          margin-bottom: 2px;
+        }
+        
+        .menu-text {
+          font-size: 0.6rem;
+        }
+      }
     }
   }
 }
