--- a/frontend/src/app/admin/layout/admin-layout/admin-layout.component.html
+++ b/frontend/src/app/admin/layout/admin-layout/admin-layout.component.html
@@ -1,8 +1,8 @@
 <div class="main-wrapper">
-  <app-sidebar></app-sidebar>
-  <div class="content-wrapper">
+  <app-sidebar #sidebar></app-sidebar>
+  
+  <div class="content-wrapper" [class.collapsed]="sidebar?.isCollapsed">
     <div class="content">
-      <!-- باقي المحتوى هنا -->
       <router-outlet></router-outlet>
     </div>
   </div>
